--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,33 @@
-#bucket {
-	list-style: none;
-	padding: 0;
+body {
+	padding: 10px;
+}
+
+button, .button {
+	background: #DDD;
+	border: 1px solid #AAA;
+	font-size: small;
+	padding: 1px 4px;
+	user-select: none;
+}
+button:hover, .button:hover {
+	background: #CCC;
+}
+button:active, .button:active {
+	background: #BBB;
+}
+
+textarea, input[type="text"] {
+	border: 1px solid #AAA;
+	padding: 1px 4px;
 }
 
 .hidden {
 	display: none;
+}
+
+#bucket {
+	list-style: none;
+	padding: 0;
 }
 
 .favicon {
